Better tab indicator

--- a/src/typewriter-status-content.conf
+++ b/src/typewriter-status-content.conf
@@ -26,6 +26,6 @@ set -g status-left "#[fg=white,bg=black,bold] #S #[fg=black,bg=white,nobold,noit
 set -g status-right "$tm_cmus#[fg=yellow,bg=black]#[fg=brightblack,bg=yellow,nobold] %Y-%m-%d #[fg=brightblack,bg=yellow,nobold,noitalics,nounderscore]❬#[fg=brightblack,bg=yellow] %H:%M #[fg=black,bg=yellow,nobold,noitalics,nounderscore]#[fg=white,bg=black,bold] #H "
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=white,bg=cyan,nobold,noitalics,nounderscore] #[fg=red,bg=cyan]#I #[fg=red,bg=cyan,nobold,noitalics,nounderscore] #[fg=red,bg=cyan]#W #F #[fg=cyan,bg=white,nobold,noitalics,nounderscore]"
+set -g window-status-format "#[fg=white,bg=white,nobold,noitalics,nounderscore] #[fg=red,bg=white]#I #[fg=red,bg=white,nobold,noitalics,nounderscore] #[fg=red,bg=white]#W #F #[fg=white,bg=white,nobold,noitalics,nounderscore]"
 set -g window-status-current-format "#[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#I #[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#W #F #[fg=black,bg=white,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
