Add info to README

--- a/src/typewriter-status-content.conf
+++ b/src/typewriter-status-content.conf
@@ -16,6 +16,7 @@ set -g @prefix_highlight_output_suffix ""
 set -g @prefix_highlight_copy_mode_attr "fg=brightcolour240,bg=white,bold"
 set -g status-right-length 150
 
+# Replace the location of the script.
 tm_cmus="#[fg=white,bg=black,bold] #(~/Development/typewriter-tmux/src/scripts/cmus-tmux-statusbar.sh) "
 
 #+--------+
@@ -27,5 +28,5 @@ set -g status-right "$tm_cmus#[fg=yellow,bg=black]#[fg=brightblack,bg=yellow,
 
 #+--- Windows ---+
 set -g window-status-format "#[fg=white,bg=white,nobold,noitalics,nounderscore] #[fg=red,bg=white]#I #[fg=red,bg=white,nobold,noitalics,nounderscore] #[fg=red,bg=white]#W #F #[fg=white,bg=white,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#I #[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#W #F #[fg=black,bg=white,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#I #[fg=white,bg=black,nobold,noitalics,nounderscore] #[fg=white,bg=black]#W ● #[fg=black,bg=white,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
